<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/detailImage"
        android:layout_width="328dp"
        android:layout_height="279dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/good_detail_image_desc"
        android:foreground="@drawable/detail_image_bg"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/backgrounds/scenic" />

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:contentDescription="@string/back_button_desc"
        android:rotation="180"
        android:src="@drawable/ic_button_arrow"
        app:layout_constraintBottom_toTopOf="@id/detailImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/detailImage" />

    <LinearLayout
        android:id="@+id/detailButtonContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/detail_button_container_bg"
        android:divider="#545589"
        android:orientation="vertical"
        android:paddingHorizontal="14dp"
        android:paddingVertical="16dp"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="@id/detailImage"
        app:layout_constraintEnd_toEndOf="@id/detailImage"
        app:layout_constraintStart_toEndOf="@id/detailImage"
        app:layout_constraintTop_toTopOf="@id/detailImage"
        app:layout_constraintVertical_bias="0.75">

        <ImageButton
            android:id="@+id/favButton"
            android:layout_width="17dp"
            android:layout_height="15dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/ic_favorite"
            android:contentDescription="@string/fav_button_desc" />

        <ImageButton
            android:id="@+id/shareButton"
            android:layout_width="15dp"
            android:layout_height="18dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/ic_share"
            android:contentDescription="@string/fav_button_desc" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/imageCarousel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailImage" />

    <TextView
        android:id="@+id/detailGoodTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageCarousel"
        tools:text="New balance Sneakers" />

    <TextView
        android:id="@+id/detailPriceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/detailGoodTitle"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="$ 22.50" />

    <TextView
        android:id="@+id/detailDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="27dp"
        android:lineSpacingExtra="2dp"
        android:textColor="#808080"
        android:textSize="9sp"
        app:layout_constraintEnd_toStartOf="@id/detailPriceLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailGoodTitle"
        tools:ignore="SmallSp"
        tools:text="Features waterproof, fire, air resistant shoes. all changed when the country of fire attacked" />

    <TextView
        android:id="@+id/reviewsAndRatingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:drawablePadding="3dp"
        android:textSize="9sp"
        app:drawableStartCompat="@drawable/ic_star"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailDescription"
        tools:ignore="SmallSp"
        tools:text="3.9 (4000 reviews)" />

    <TextView
        android:id="@+id/colorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="13dp"
        android:text="@string/color_label"
        android:textColor="#737373"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reviewsAndRatingLabel"
        tools:ignore="SmallSp" />

    <LinearLayout
        android:id="@+id/colorContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="11dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/colorLabel"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addToCartContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/detail_add_container_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/quantityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="14dp"
            android:textColor="#808080"
            android:textSize="9sp"
            tools:text="Quantity: 1"
            tools:ignore="SmallSp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/minusAmountButton"
            android:layout_width="38dp"
            android:layout_height="22dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:drawableStart="@drawable/ic_minus"
            style="@style/BaseButton"
            app:layout_constraintTop_toBottomOf="@id/quantityLabel"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/plusAmountButton"
            android:layout_width="38dp"
            android:layout_height="22dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:drawableStart="@drawable/ic_plus"
            style="@style/BaseButton"
            app:layout_constraintTop_toBottomOf="@id/quantityLabel"
            app:layout_constraintStart_toEndOf="@id/minusAmountButton"/>
        
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addCartButton"
            android:layout_width="170dp"
            android:layout_height="44dp"
            style="@style/BaseButton"
            android:text="@string/add_cart_label"
            android:textSize="8sp"
            android:layout_marginEnd="23dp"
            android:layout_marginTop="19dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/plusAmountButton"
            tools:ignore="SmallSp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>